change test post

--- a/_posts/2022-06-01-test.md
+++ b/_posts/2022-06-01-test.md
@@ -1,8 +1,22 @@
 ---
-title:
+title: How to Mount NFS share on Debian 
 date: 2022-06-01
-categories: [test] 
-tags: [test]            # TAG names should always be be lowercase and seperated by a commma
+categories: [share NFS Networking] 
+tags: [nfs,server,debian]            # TAG names should always be be lowercase and seperated by a commma
 ---
 
-# Test
+# How to Mount NFS share on Debian
+
+The network file system NFS is an efficient way of sharing files and directories to other machines in a network. It is based on client-server architecture, where the server directory is mounted onto client systems. NFS allows clients to access shared directories as if they are a part of their own system, and remains a popular way of sharing files among Linux systems.
+
+In this article, we will mount a NFS share on a Debian client machine manually, as well as automatically, upon system boot.
+
+We will use Debian system to run the commands and procedures discussed in this article.
+
+## Pre-Requisites
+
+Before proceeding, be sure that:
+
+* NFS server is installed and running on the remote machine
+* NFS shared directory on the remote server is exporte
+* Firewall is allowing access to NFS clients
