Format NFS Post

--- a/_posts/2022-06-01-test.md
+++ b/_posts/2022-06-01-test.md
@@ -5,7 +5,7 @@ categories: [share NFS Networking]
 tags: [nfs,server,debian]            # TAG names should always be be lowercase and seperated by a commma
 ---
 
-This page has been originally created by [Karim Buzdar]() found on [Linuxhint]([How to Mount NFS share on Debian 10](https://linuxhint.com/mount_nfs_share_debian/)). I want to thank him for the contribution.
+This page has been originally created by "Karim Buzdar" found on "Linuxhint-How to Mount NFS share on Debian 10(https://linuxhint.com/mount_nfs_share_debian)". I want to thank him for the contribution.
 
 # How to Mount NFS share on Debian
 
